@@ -48,10 +48,18 @@
 #endif
 #endif
 
+#ifndef UNALIGNED_WORD_ACCESS
 #if defined(__i386) || defined(__i386__) || defined(_M_IX86) || \
     defined(__x86_64) || defined(__x86_64__) || defined(_M_AMD64) || \
     defined(__powerpc64__) || \
     defined(__mc68020__)
+#define UNALIGNED_WORD_ACCESS 1
+#else
+#define UNALIGNED_WORD_ACCESS 0
+#endif
+#endif
+
+#if UNALIGNED_WORD_ACCESS
 #define PLATFORM_UNALIGNED_WORD_ACCESS
 #endif
 
